# bcfeed

./: .gitignore  GMAIL_SETUP.md  README.md  SETUP.md  app_gui.py  bcfeed.py  bcfeed.spec  dashboard.css  dashboard.html  dashboard.js  dashboard.py  dashboard_html.py  embed_proxy.py  gmail.py  paths.py  pipeline.py  privacy.md  pyproject.toml  requirements-build.txt  requirements.txt  server.py  session_store.py  util.py
Formula/: bcfeed.rb
bcfeed/: bandcamp.py  bcfeed.py  gmail.py  paths.py  pipeline.py  server.py  session_store.py  util.py
bcfeed_tests/: bandcamp_test.py  gmail_test.py  util_test.py
scripts/: build_mac_app.sh
templates/: docs.html
