[project]
name = "bcfeed"
version = "0.1.0"
description = "A Python app that generates a dashboard of releases from your Bandcamp release notification emails"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client",
    "google-auth-oauthlib",
    "requests",
    "beautifulsoup4",
    "flask",
    "furl",
]

[project.scripts]
bcfeed = "bcfeed:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
index-url = "https://pypi.org/simple"

[dependency-groups]
dev = [
    "pytest",
    "pre-commit",
]
